--- a/行政-財政及金融/銀行法.md
+++ b/行政-財政及金融/銀行法.md
@@ -14,7 +14,9 @@
 
 * 8 本法稱定期存款，謂有一定時期之限制，存款人憑存單於到期時提取之存款。
 
-* 9 本法稱儲蓄存款，謂個人或營利法人，以積蓄資金為目的，憑存摺或存單提取之小額存款。
+* 9 本法稱儲蓄存款，謂個人或非營利法人，以積蓄資金為目的，憑存摺或存單提取之存款。
+
+> 釋：本條原規定所稱「小額存款」經財政部會商中央銀行規定每戶存款最高額度暫以新臺幣壹百萬元為限，惟實施以來，社會迭有反映認為不切實際，對於非營利法人而有鉅額款項須賴存儲孳生利息者殊感不便，如存戶以分散方式存儲，銀行作業時亦難核阻，同時具有儲蓄性質之信託資金並無最高額度之限制，爰刪除原規定「小額」二字，俾切實際。
 
 * 10 本法稱信託資金，謂銀行以受託人地位，收受信託款項，依照信託契約約定之條件，為信託人指定之受益人之利益而經營之資金。
 
@@ -36,7 +38,9 @@
 
 * 19 本法稱主管機關：在中央為財政部；在省（市）為省（市）政府財政廳（局）。
 
-* 20 本法所稱銀行，分左列四種：一、商業銀行。二、儲蓄銀行。三、專業銀行。四、信託投資公司。銀行之種類或其專業，應在其名稱中表示之。
+* 20 本法所稱銀行，分左列四種：一、商業銀行。二、儲蓄銀行。三、專業銀行。四、信託投資公司。銀行之種類或其專業，除政府設立者外，應在其名稱中表示之。
+
+> 釋：銀行之開放，其種類專業應在名稱中表示之。第二項中增列不在此限之條件。
 
 * 21 銀行及其分支機構，非經完成第二章所定之設立程序，不得開始營業。
 
@@ -67,6 +71,10 @@
 * 34 銀行不得於規定利息外，以津貼、贈與或其他給與方法吸收存款。但對於信託資金依約定發給紅利者，不在此限。
 
 * 35 銀行負責人及職員不得以任何名義，向存戶、借款人或其他顧客收受佣金、酬金或其他不當利益。
+
+* 35.1 銀行之負責人及職員不得兼任其他銀行任何職務。
+
+> 釋：一、本條新增。二、因董事與監察人均居重要地位，銀行一切大政方針均需經過董事議決。為避免造成銀行的「托辣斯」故改為「銀行之負責人及職員不得兼任其他銀行任何職務」。
 
 * 36 中央主管機關於必要時，經洽商中央銀行後，得對銀行無擔保之放款或保證，予以適當之限制。
 
@@ -154,7 +162,9 @@
 
 * 78 儲蓄銀行經營左列業務：一、收受儲蓄存款。二、收受定期存款。三、收受活期存款。四、發行金融債券。五、辦理企業生產設備中期放款、長期放款，及中、長期分期償還放款。六、辦理企業建築、住宅建築中期放款，及中、長期分期償還放款。七、投資公債、國庫券、公司債券及公司股票。八、辦理票據貼現。九、辦理商業匯票承兌。十、辦理國內匯兌。十一、保證發行公司債券。十二、代理收付款項。十三、承銷公債、國庫券、公司債券及公司股票。十四、辦理經中央主管機關核准之國內外保證業務。十五、辦理與前列各款業務有關之倉庫及其他保管業務。
 
-* 79 儲蓄存款，在到期前不得中途提取。但得憑存單質借，其質借成數，由中央主管機關洽商中央銀行定之。
+* 79 定期儲蓄存款到期前不得提取。但存款人得質借或中途解約，其利息按已存期間定期存款利率計算，辦法由中央主管機關洽商中央銀行定之。
+
+> 釋：原條文之規定，鑒於二年來實際執行情形，對於部分存款人遇有特殊需要，必須提前解約者，甚感困難，增加銀行與存款人間之紛擾，社會亦多反映，為兼顧實情，爰酌予修正，俾富彈性。
 
 * 80 儲蓄銀行發行金融債券，得以折價或溢價方式發售，其開始還本期限，不得低於兩年。儲蓄銀行金融債券之最高發行額，以發行銀行淨值之二十倍為限；其發行辦法，由中央主管機關洽商中央銀行定之。
 
@@ -202,7 +212,9 @@
 
 * 102 信託投資公司自有資金之營運，除存放銀行外，以經營前條第一款至第七款之業務為限。
 
-* 103 信託投資公司應以等於其所經營之各種信託資金之契約總值百分之二十之公債、銀行保證之公司債券或金融債券，繳存中央銀行，作為因違反法令規章或信託契約條款致受益人遭致損失之賠償準備。前項賠償準備，在公司開業時期，暫以該信託投資公司資本總額百分之二十為準，俟公司經營一年以後，再照前項標準調整之。信託投資公司經營第一百零一條第七款業務時，至少應指撥相當於其淨值百分之十金額，專門經營承銷及自營買賣證券業務；該項專款在未動用時，得以現金貯存，存放於其他金融機構或購買政府債券。
+* 103 信託投資公司應以公債、國庫券、金融債券、銀行保證發行之公司債券或現金繳存中央銀行，作為因違反法令規章或信託契約條款致受益人遭致損失之賠償準備。其賠償準備與各種信託資金契約總值之比率，由中央銀行在百分之十五至二十之範圍內定之。但其繳存總額最低不得少於其實收資本總額百分之二十。前項賠償準備，在公司開業時期，暫以該信託投資公司實收資本總額百分之二十為準，俟公司經營一年後，再照前項標準於每月月底調整之。信託投資公司經營第一百零一條第七款業務時，至少應指撥相當於其淨值百分之十金額，專門經營承銷及自營買賣證券業務；該項專款在未動用時，得以現金貯存，存放於其他金融機構或購買政府債券。
+
+> 釋：一、本條第一項原規定信託資金應繳之賠償準備率過高，有礙信託投資業務之發展，故視信託業財務狀況採取彈性規定，並增列國庫券或現金亦得充作賠償準備，以及最低繳存額之規定，以資適應。二、公司經營一年後，其賠償準備應於每月月底調整，爰將第二項修正予以明定。三、第三項不修正。
 
 * 104 信託投資公司收受、經理或運用各種信託資金及經營信託財產，應與信託人訂立信託契約，載明左列事項：一、資金營運之方式及範圍。二、財產管理之方法。三、收益之分配。四、信託投資公司之責任。五、會計報告之送達。六、各項費用收付之標準及其計算之方法。七、其他有關協議事項。
 
@@ -260,7 +272,9 @@
 
 * 131 有左列情事之一者，處一千元以上三千元以下罰鍰：一、違反第三十四條之規定吸收存款者。二、違反第四十五條、或第五十條、或第一百十四條之規定不申報營業書表或不為公告或報告者。
 
-* 132 違反本法或中央主管機關或中央銀行依本法所為之規定，除本法另有規定者外，經限期糾正而仍不遵行者，處一千元以上三千元以下罰鍰。
+* 132 違反本法或中央主管機關或中央銀行依本法所為之規定者，除本法另有規定外，處一千元以上三千元以下罰鍰。
+
+> 釋：本條原規定限期糾正之程序可由行政機關自行斟酌採用，爰予刪除，以免違反規定者倖存免罰之企圖。
 
 * 133 第一百二十九條至第一百三十二條所定罰鍰之受罰人在銀行分行為分行負責人，在銀行本行為各部負責人；其能證明係依上級指示辦理者，以總經理或董事長為受罰人。
 
@@ -268,7 +282,9 @@
 
 * 135 罰鍰經限期繳納而逾期不繳者，自逾期之日起，每日加收滯納金百分之一；逾三十日仍不繳納者，移送法院強制執行，並得由中央主管機關勒令該銀行或分行停業。
 
-* 136 銀行經依本章之規定處罰後，於規定限期內仍不予改正者，得對其同一事實或行為再予加倍處罰。其屢違而情節重大者，並得撤銷其許可。
+* 136 銀行經依本章規定處罰後，於規定限期內仍不予改正者，得對其同一事實或行為再予加一倍至五倍處罰。其屢違而情節重大者，並得責令限期撤換負責人或撤銷其許可。
+
+> 釋：本條原規定之處罰仍嫌過輕，不足發揮處罰之功效，爰予修正下列兩重點：一、原規定再予加倍處罰修正為再予加一至五倍處罰。二、原規定屢違而情節重大者，增列「責令限期撤換負責人」。以加強執行處罰之成效。
 
 * 137 本法施行前，未經申請許可領取營業執照之銀行，或其他經營存放款業務之類似銀行機構，均應於中央主管機關指定期限內，依本法規定，補行辦理設立程序。
 
