--- a/行政-經濟及能源/專利法.md
+++ b/行政-經濟及能源/專利法.md
@@ -1,14 +1,24 @@
-* 1 凡新發明之具有工業上價值者，得依本法申請專利。
+* 1 凡新發明具有產業上利用價值者，得依本法申請專利。
 
-* 2 本法所稱新發明，謂無左列情事之一者：一、申請前已見於刊物或已在國內公開使用，他人可能仿效者。但因研究實驗而發表或使用，於發表或使用之日起六個月內申請專利者，不在此限。二、有相同之發明核准專利在先者。三、已向外國政府申請專利逾一年者。四、經陳列於政府或政府認可之展覽會，於開會之日起，逾六個月尚未申請專利者。五、申請專利前，秘密大量製造，而非從事實驗者。
+> 釋：為鼓勵創新發明，使發明人樂於申請專利，故加修正，以示放寬。
 
-* 3 本法所稱工業上價值，謂無左列情事之一者：一、不合適用者。二、尚未達到工業上實施之階段者。
+* 2 本法所稱新發明，謂無左列情事之一者：一、申請前已見於刊物或已公開使用，他人可能仿效者。但因研究、實驗而發表或使用，於發表或使用之日起六個月內申請專利者，不在此限。二、有相同之發明核准專利在先者。三、經陳列於政府主辦或政府認可之展覽會，於開會之日起，逾六個月尚未申請專利者。四、申請專利前，大量製造，而非從事實驗者。五、運用申請前之習用技術、知識顯而易知未能增進功效者。
 
-* 4 左列之物品不予專利：一、化學品。二、飲食品及嗜好品。三、醫藥品及其調合品。四、發明品之使用違反法律者。五、妨害公共秩序、善良風俗或衛生者。
+> 釋：一、刪除第一款「在國內」三字。二、為便利引進外國專利技術，提高國內工業技術水準，吸引國外投資，爰將現行第三款刪除，並將現行第四、五款移列為第三、四款。三、發明除應具有新穎性外，尚須有進步性始准專利。如其發明為一般具備該項知識之人，顯而易知者，為習用技術之轉用，各國專利審查實務，均不予專利，乃增列第五款。
+
+* 3 本法所稱具有產業上利用價值，謂無左列情事之一者：一、不合實用者。二、尚未達到產業上實施之階段者。
+
+> 釋：一、比照第一條之修正將「工業上價值」修正為「可供產業上利用具有有價值」。二、「適用」修正為「實用」。
+
+* 4 左列物品不予專利：一、化學品。二、飲食品及嗜好品。三、醫藥品及其調合品。四、發明品之使用違反法律者。五、妨害公共秩序、善良風俗或衛生者。六、糧食新品種。
+
+> 釋：第一項序文酌作文字修正。並增訂第六款「糧食新品種」。
 
 * 5 發明於軍事上有秘密之必要者，其應得專利之權利得由政府收用，給以相當之報酬。
 
-* 6 申請專利之發明，經審查確定後，給予專利權，並發證書。專利權之期間為十五年，自申請之日起算。
+* 6 申請專利之發明，經審查確定後，給予專利權，並發證書。專利權期間為十五年，自公告之日起算。但自申請之日起不得逾十八年。
+
+> 釋：一、第一項係由現行第六條前段移列。二、為使專利權人能享有完整專利期間之利益，參酌外國立法例，將專利權之期間改自審定公告之日起算；又為防止申請人於申請後，故意拖延，乃增訂但書，明定自申請日不得逾越之年限，作為修正條文第二項。
 
 * 7 專利申請權及專利權，均得讓與或繼承。
 
@@ -16,7 +26,9 @@
 
 * 9 利用他人之發明或新型在其專利權期內再發明者，得申請專利，但再發明人應給專利權人以相當之補償金或協議合製，專利權人如無正當理由，不得拒絕。
 
-* 10 關於專利事項，於經濟部設立專利局掌理之。專利局之組織，以法律定之。
+* 10 關於專利事項，於經濟部設立專利局掌理之；在未設立專利局前，由經濟部指定所屬機關掌理之。專利局之組織，以法律定之。
+
+> 釋：為簡化行政機構，專利局未經設置，目前係由經濟部指定中央標準局兼辦專利業務，為配合實際情形，修正本條第一項。
 
 * 11 專利局於居住外國及邊遠或交通不便之地者，得依職權或據申請延展其對於專利局應為程序之法定期間。
 
@@ -58,9 +70,13 @@
 
 * 30 經審查認為可予專利之發明，應將審定書連同說明書、圖式公告之，並通知申請人；不予專利之發明，應將審定書通知申請人。
 
-* 31 專利申請人對於不予專利之審定有不服者，得於審定書送達之次日起三十日內，備具理由書，請求再審查。
+* 31 專利申請人對於不予專利之審定有不服者，得於審定書送達之次日起三十日內，備具理由書，請求再審查。但因申請程序或申請權人不合法而駁回者，得逕依法提起訴願及行政訴訟。
 
-* 32 公告中之發明，任何人認為有違反本法第一條至第四條之規定者，得自公告之日起六個月內備具聲請書，附具證件，向專利局提起異議請求再審查。
+> 釋：按申請案因申請權人不合法或申請程序不合法而駁回時，因與工業技術知識無關，申請人如有不服，自應依法提起訴願及行政訴訟，爰增訂但書予以明定；至依本條但書規定經提起訴願再訴願及行政訴訟撤銷原處分者，自應由原處分機關從實體上審查。
+
+* 32 公告中之發明，任何人認有違反第一條至第四條之規定，或利害關係人認有不合第十二條之規定者，得自公告之日起三個月內備具申請書，附具證件，向專利局提起異議，請求再審查。
+
+> 釋：一、按任何人對公告之專利案，認有違反專利要件得向專利局提起異議，請求再審查之期間，以目前交通、傳播、通訊設施發達，其「六個月」公告期間已嫌冗長，乃參照多數國家立法例，改為「三個月」，俾法律關係早臻確定。二、參照本法第一零一條有關公告中之新型，利害關係人得提起異議請求再審查之要件規定，增列「或利害關係人認有不合本法第十二條之規定者」，亦得提起異議，以資適用。
 
 * 33 專利局接到異議聲請書後，應將副本發交申請人，限期一個月內答辯，逾期不答辯者，申請案不成立。但經先行聲明理由准予展期者，不在此限。
 
@@ -70,9 +86,13 @@
 
 * 36 專利局依職權或依異議之結果，令申請人更正其說明書及圖式。
 
-* 37 對於再審查之審定，有不服時，得於審定書送達之次日起三十日內，申請經濟部為最後之核定。
+* 37 對於再審查之審定有不服時，得於審定書送達之次日起三十日內，依法提起訴願及行政訴訟。
 
-* 38 公告期滿無人提起異議或異議不成立時，即為審查確定。
+> 釋：刪除經濟部為最後核定之程序，以維行政體系，並免權責混淆，申請人不服再審查之審定時，得逕行提起訴願及行政訴訟。
+
+* 38 審定公告之發明，公告期滿無人提起異議或異議不成立時，即為審查確定。不予專利之審定，未依規定請求再審查或經再審查之審定不予專利者，即為審查確定。但經修正其申請專利範圍、說明書、圖式、模型或樣品後，合於專利要件者，得再行申請專利。主管機關對專利之申請，認有不合法定程式者，應於收文後十日內通知補正；其應行補正事項，應以一次通知之。主管機關辦理審查及再審查，自收文之日起至審定之日止，不得逾一年。但補正面詢及試驗期間不計在內。
+
+> 釋：一、最後核定之程序，已於前條審查中刪除，本條參酌予以修正。二、不予專利之審定之確定，本法並未明定，惟不予專利之審定，無非基於非新發明，非可供工業上利用或係化學品、飲食品、嗜好品、醫藥品及其調和品等之技術原因；經確定為不予專利之申請案，申請人如能斟酌不予專利之理由，充實其詳細說明書、圖式或模型，並能充分說明其為合於專利要件者，自應許以重行申請專利，俾便本於工業技術知識另行審查，增訂第二項以符實用。
 
 * 39 公告之專利案，應將審定書、說明書或模型或樣品等，在專利局或其他適宜地點陳列六個月公開閱覽。
 
@@ -82,7 +102,9 @@
 
 * 42 專利權為專利權人專有製造、販賣或使用其發明之權，其發明若為一種方法者，包括以此方法直接製成之物品。
 
-* 43 前條之規定，於左列各款情事，不適用之：一、為研究或試驗，實施其發明，而無營利行為者。二、申請前已在國內使用，或已完成必須之準備者。但在申請前六個月內，於專利申請人處得知其製造方法，並經專利申請人聲明保留其專利權者，不在此限。三、申請前已存在國內之物品。四、僅由國境經過之交通工具或其裝置。五、非專利申請權人所得專利權，以專利權人舉發而撤銷時，其實施權人，在舉發前，以善意在國內使用或已完成必須之準備者。本條第二及第五兩款之使用人，限於在其原有事業內繼續利用。
+* 43 前條之規定，於左列各款情事，不適用之：一、為研究或試驗，實施其發明，而無營利行為者。二、申請前已在國內使用，或已完成必須之準備者。但在申請前六個月內，於專利申請人處得知其製造方法，並經專利申請人聲明保留其專利權者，不在此限。三、申請前已存在國內之物品。四、僅由國境經過之交通工具或其裝置。五、非專利申請權人所得專利權，以專利權人舉發而撤銷時，其實施權人，在舉發前，以善意在國內使用或已完成必須之準備者。六、自國外輸入之物品，係原發明人租與或讓與他人實施所產製者。本條第二及第五兩款之使用人，限於在其原有事業內繼續利用。
+
+> 釋：增列第六款。為免專利權人在本國取得專利權後，壟斷市場，對於專有販賣權之保護範圍，應作合理限制，准許他人自國外輸入原發明人租與讓與他人實施所產製之物品，藉以維護本國之經濟利益。
 
 * 44 專利案公告後，暫准發生專利權之效力。前項效力，因申請不合程序作為無效或因異議不予專利視為自始即不存在。
 
@@ -118,7 +140,9 @@
 
 * 60 有左列情事之一者，應撤銷其專利權，並追繳證書：一、違反本法第一條至第四條之規定者。二、專利權人為非專利申請權人者。三、說明書或圖式故意不載明實施必要之事項，或故意記載不必要之事項，使實施為不可能或困難者。四、說明書與曾在外國申請時之說明書內容不同者。五、說明書之記載非發明之真實方法者。
 
-* 61 前條第二款限於有專利申請權人。其他各款，任何人得附具證據向專利局舉發之。但異議不成立之案件，同一人不得以同一理由，再為舉發。
+* 61 前條第二款之舉發，限於有專利申請權人。其他各權，任何人得附具證據向專利局舉發之。異議案及前項舉發案，經審查不成立確定者，任何人不得以同一理由，再為舉發。
+
+> 釋：原條文但書異議案不成立之案件，僅限于同一人不得以同一理由再為舉發，而舉發案更無明文限制，以致糾紛不已，對於專利權實欠保障，爰將但書刪除，並增訂第二項。
 
 * 62 前條舉發案之處理，準用本法關於再審查各條之規定。
 
@@ -130,15 +154,25 @@
 
 * 66 專利局應備專利權簿，記載核准專利之發明之名稱、專利期限、專利權人代理人姓名、住址，及其他有關專利之權利與法令所定之一切事項。
 
-* 67 核准專利滿三年，無適當理由未在國內實施或未適當實施其發明者，專利局得依職權撤銷其專利權，或依關係人之請求，特許其實施，並通知專利權人。但特許實施人對專利權人應予以補償金，其數額有爭執時，由專利局定之。
+* 67 核准專利滿三年，為適當理由未在國內實施或未適當實施其發明者，專利局得依關係人之請求，特許其實施。特許實施人對專利權人應予以補償金，其數額有爭執時，由專利局核定之。專利局接到特許實施申請書後，應將副本發交專利權人，限期在三個月內答辯；逾期不答辯者，得逕行處理。
 
-* 68 有左列情事之一者，認為未適當實施：一、核准專利之發明品，可在國內使用而未為大規模製造，且不能提出充分理由者。二、專利權人以其發明完全或大部份在國外製造，輸入國內者。三、利用他人發明，為再發明之專利權人，非實施原發明人之發明，不能實施其再發明，而原發明之專利權人，在合理之條件下，拒絕租與再發明人實施者。四、在國外輸入零件，僅在國內施工裝配者。
+> 釋：一、基於市場條件等客觀因素，若干科技上之發明，未必均能於核准專利三年內完成實施，故將本條有關核准專利三年不實施，專利局得「依職權撤銷其專利權」之規定刪除，以加強保護已核准之專利權益。二、專利局依本條核准關係人特許實施之前，應先予專利權人答辯之機會，爰增列第二項規定。三、第一項末句內「定之」修正為「核定之」。
 
-* 69 依本法第六十七條規定取得特許實施權人不適當實施時，專利局得依關係人之請求或依職權撤銷其特許實施權。
+* 68 有左列情事之一者，認為未適當實施：一、專利權人以其發明全部或大部分在國外製造，輸入國內者。二、利用他人發明為再發明之專利權人，非實施原發明人之發明，不能實施其再發明；而原發明之專利權人，在合理之條件下拒絕租與再發明人實施者。三、在國外輸入零件，僅在國內施工裝配者。
 
-* 70 核准專利之發明品，足以代替國內最需要之物品，雖經適當實施製造仍不能充份供給，專利局得規定期限，令其擴充製造，逾期得取銷其專利權。前項期限得因專利權人之請求酌予延長。
+> 釋：一、近年來，華僑或外國人在國內投資設廠案件增多，其產品有限制必須全部外銷者，故專利產品，應不限在國內銷售使用之必要，復以是否大規模製造，認定殊感不易，且本法第七十條已規定，核准專利之發明品，足以代替國內最需要之物品，如經適當實施製造，仍不能充分供給時，專利局得限期令其擴充製造，逾期得取銷其專利權，故現行第一款已無必要，爰予刪除。二、第一款「完全」修正為「全部」。
 
-* 71 本法第六十七條之特許實施，第六十九條之撤銷實施權及第七十條之撤銷專利權，各當事人有不服時，得申請經濟部核定。
+* 69 核准專利之發明品，足以代替國內最需要之物品，雖經適當實施製造，仍不能充分供應時，專利局得規定期限令其擴充製造；逾期未擴充製造者，得依關係人之請求特許其實施，特許實施人對專利權人應予以補償金，其數額有爭執時，由專利局核定之。專利局對特許實施之處理程序，比照第六十七條第二項特許實施程序辦理。第一項之擴充期限，得因專利權人之請求，酌予延長。
+
+> 釋：一、刪除逾期未擴充製造得取銷其專利權之規定，改為特許實施，其處理程序比照第六十七條第二項辦理。二、本條改採特許實施，原法第六十九條應配合修改，並變動其條次。
+
+* 70 依第六十七條、第六十九條取得特許實施權人不適當實施時，專利局得依關係人之請求或依職權撤銷其特許實施權。
+
+> 釋：配合第六十九條修正之。
+
+* 71 第六十七條、第六十九條之特許實施及第七十條之撤銷特許實施權，各當事人有不服時，得依法提起訴願及行政訴訟。
+
+> 釋：原草案第六十七條已將核准專利滿三年，無適當理由，未在國內實施其發明者，專利局得依職權撤銷其專利權之規定刪除，以便加強保護已核准之專利權益，而第七十條之已適當實施，只是產品不能充分供應國內需要，就社會利益言，其情況應較前者為好，如今前者之撤銷專利權已予刪除，而後者仍予保留，顯不平衡。審查會以第七十條行政院未提請修正，經本聯席會委員擬具有關各條修正草案，另依規定以委員提案方式提報院會併案討論，故做此修正。
 
 * 72 政府因軍事上之利用或國營事業之需要，得限制或徵用專利權之一部或全部。但應給專利權人以補償金。
 
@@ -146,17 +180,27 @@
 
 * 74 專利權人登載廣告，不得逾越申請專利之範圍；非專利物品或非專利方法所製物品，不得附加請准專利字樣，或足以使人誤認為請准專利之標記。
 
-* 75 專利證書費，每件六十元。
+* 75 關於專利之各項申請，申請人於申請時，應繳申請費。核准專利者，專利權人應繳證書費及年費，請准延展專利者，在延展期內，仍應繳年費。申請費、證書費及年費之金額，由行政院定之。
 
-* 76 核准專利之發明，每年每件應繳專利年費如左：一、第一年至第五年，每年三十元。二、第六年至第十年，每年六十元。三、第十一年至第十五年，每年一百二十元。前項年費，第一年應於領取證書時繳納，第二年以後應於屆期前三個月內預繳之。
+> 釋：查現行專利法有關申請專利應納各費之金額，係分別規定於專利法及其施行細則中，時逾數十年，未經調整，原訂額度偏低，已難配合實際需要，爰本應納各費由行政院定之之旨，將第七十五條、第七十七條、第八十條及第一百零五條、第一百二十四條有關應納各費，參照商標法第十六條之例，合併修正之。
 
-* 77 依本法第五十五條請准延展專利者，在延展期內每件每年應繳年費一百五十元。
+* 76 核准專利之發明，其年費自公告之日起算，第一年應於領取證書時繳納，第二年以後應於屆期前繳納之。
 
-* 78 專利權人在應繳專利年費之期限內未繳費時，得於該期限後之六個月內補繳之。但應按前二條規定之費增加一倍。
+> 釋：一、專利年費之金額，已併定於修正條文第七十五條，第一項爰予刪除。二、專利年費之起算，為求與專利權期間改自公告日起算相配合，以及第二年以後專利年費之繳納，為求切符實際，爰就第二項作修正。
+
+* 77 （刪除）
+
+> 釋：延展專利年費之金額，已併定於修正條文第七十五條，爰刪除本條。
+
+* 78 專利權人在應繳專利年費之期間內未繳費時，得於該期限後之六個月內補繳之。但應按規定之費增加一倍。
+
+> 釋：配合第七十七條之刪除，爰刪除但書中「前二條」三字。
 
 * 79 專利局對於發明人或其繼承人認為無繳納專利年費之能力時，得據申請延期二年或減免之。
 
-* 80 左列各程序，每件應繳費二十元。一、申請專利。二、聲請異議。三、請求再審查。四、追加專利。五、延展專利。六、請求實施權。
+* 80 （刪除）
+
+> 釋：有關申請專利應納各費之金額已併定於修正條文第七十五條，爰刪除本條。
 
 * 81 專利權受侵害時，專利權人，或實施權人，或承租人，得請求停止侵害之行為賠償損害或提起訴訟。
 
@@ -174,31 +218,47 @@
 
 * 88 關於專利權之民事或刑事訴訟，在申請案、異議案、撤銷案未確定以前，法院應中止其程序。
 
-* 89 偽造有專利權之發明品者，處三年以下有期徒刑、拘役或科或併科五千元以下罰金。
+* 89 偽造有專利權之發明品者，處三年以下有期徒刑、拘役或科或併科四萬元以下罰金。
 
-* 90 仿造有專利權之發明品或竊用其方法者，處二年以下有期徒刑、拘役或科或併科三千元以下罰金。
+> 釋：一、為加強保障專利權人之權益，對於侵害專利權者，自有加重處罰之必要，惟以係經濟性犯罪型態，乃僅提高所科之罰金，期能發揮惕勵作用。二、將原訂罰金「五千元以下」，提高為四萬元。
 
-* 91 明知為偽造或仿造之發明品而販賣，或意圖販賣而陳列，自外國輸入者，處一年以下有期徒刑、拘役或二千元以下罰金。
+* 90 仿造有專利權之發明品或竊用其方法者，處二年以下有期徒刑、拘役或科或併科一萬元以下罰金。
 
-* 92 違反本法第七十四條之規定者，處六個月以下有期徒刑、拘役或一千元以下罰金。
+> 釋：一、為加強保障專利權人之權益，對於侵害專利權者，自有加重處罰之必要，惟以係經濟性犯罪型態，乃僅提高所科之罰金，期能發揮惕勵作用。二、將原訂罰金「三千元以下」，提高為「一萬元以下」。
+
+* 91 明知為偽造或仿造有專利權之發明品而販賣，或意圖販賣而陳列，或自國外輸入者，處一年以下有期徒刑、拘役或科或併科五千元以下罰金。
+
+> 釋：一、為加強保障專利權人之權益，對於侵害專利權者，自有加重處罰之必要，惟以係經濟性犯罪型態，乃僅提高所科之罰金，期能發揮惕勵作用。二、將原訂「或二千元以下罰金」修正為「或科或併科五千元以下罰金」；並將「外國」二字修正為「國外」，以應需要。
+
+* 92 違反第七十四條之規定者，處六個月以下有期徒刑、拘役或科或併科三千元以下罰金。
+
+> 釋：為防杜專利權人登載不實之廣告使人對請准專利範圍發生誤認，且因違反本法第七十四條登載不實廣告者，係經濟性犯罪型態，爰將原訂罰金「或一千元以下罰金」修正為「或科或併科三千元以下罰金」。
 
 * 93 本法第八十九條至第九十一條之罪，須告訴乃論，其告訴應自得知被侵害之日起一年內為之。
 
-* 94 專利局職員洩漏職務上所知關於專利之發明，或申請人事業上之秘密者，處三年以下有期徒刑、拘役或三千元以下罰金。
+* 94 專利局職員洩漏職務上所知關於專利之發明，或申請人事業上之秘密者，處三年以下有期徒刑、拘役或科或併科四萬元以下罰金。
+
+> 釋：為加強保障專利權益，對於專利局職員洩漏職務上所知秘密者，誠有加重處罰必要，爰將原訂「或三千元以下罰金」，比照第九十條至第九十二條修正為「或科或併科四萬元以下罰金」，用資儆惕。
 
 * 95 凡對於物品之形狀構造或裝置首先創作合於實用之新型者，得依本法申請專利。
 
-* 96 本法所稱新型，謂無左列情事之一者：一、申請前已見於刊物或已在國內公開使用他人可能仿效者，但因研究實驗而發表或使用於發表或使用之日起六個月內申請新型專利者，不在此限。二、有相同之發明或新型核准專利在先者。三、已向外國政府申請專利逾一年者。四、經陳列於政府或政府認可之展覽會，於開會之日起逾六個月尚未申請專利者。五、申請專利前大量製造而非從事實驗者。
+* 96 本法所稱新型，謂無左列情事之一者：一、申請前已見於刊物或已公開使用他人可能仿效者。但因研究、實驗而發表或使用於發表或使用之日起六個月內申請新型專利者，不在此限。二、有相同之發明或新型核准專利在先者。三、經陳列於政府主辦或政府認可之展覽會，於開會之日起，逾六個月尚未申請專利者。四、申請專利前大量製造而非從事實驗者。五、運用申請前之習用技術、知識顯而易知未能增進功效者。
+
+> 釋：一、為便利引進外國專利技術，提高國內工業技術水準，吸引國外投資，爰將現行第三款刪除，並將現行第四、五款移列為第三、四款。二、發明除應具有新穎性外，尚須有進步性始准專利。如其發明為一般具備該項知識之人，顯而易知者，為習用技術之轉用，各國專利審查實務，均不予專利，乃增列第五款。
 
 * 97 左列物品，不予新型專利：一、新型之使用違反法律者。二、妨害公共秩序善良風俗或衛生者。三、相同或近似於黨旗、國旗、軍旗、國徽、勳章之形狀者。
 
 * 98 合於本法第九十五條及第九十六條之新型於軍事上有秘密之必要者，其應得專利之權利，得由政府收用，給以相當之報酬。
 
-* 99 申請專利之新型，經審查確定後，給予新型專利權，並發證書。新型專利權之期間為十年，自申請之日起算。
+* 99 申請專利之新型，經審查確定後，給予新型專利權，並發證書。新型專利權之期間為十年，自公告之日起算。但自申請之日起不得逾十二年。
+
+> 釋：為使專利權人能享有完整專利期間之利益，參酌外國立法例，將專利權之期間改自審定公告之日起算；又為防止申請人於申請後，故意拖延，乃增訂但書，明定自申請日不得逾越之年限。
 
 * 100 新型，先經申請發明或新式樣專利改請新型專利者，得以申請發明或新式樣專利之日，作為申請新型專利之日。但在發明或新式樣專利案審定書送達之日起，一個月後申請者，不在此限。
 
-* 101 公告中之新型，任何人認為有違反本法第九十五條至第九十七條之規定，或利害關係人認為違反本法第十二條之規定者，得自公告之日起六個月內，備具聲請書，附具證件，向專利局提起異議，請求再審查。
+* 101 公告中之新型，任何人認有違反第九十五條至第九十七條之規定，或利害關係人認有不合第十二條之規定者，得自公告之日起三個月內，備具申請書，附具證件，向專利局提起異議，請求再審查。
+
+> 釋：本條除作文字修正外，並將審定公告期間，由「六個月」縮短為「三個月」。以目前交通、傳播、通訊設施發達，其「六個月」公告期間已嫌冗長，乃參照多數國家立法例，改為「三個月」，俾法律關係早臻確定。
 
 * 102 新型專利權，為專利權人專有製造販賣或使用其新型之權。
 
@@ -206,17 +266,27 @@
 
 * 104 有左列情事之一者，應撤銷其專利權，並追繳證書：一、違反本法第九十五條至第九十七條之規定者。二、新型專利權人，為非新型專利申請權人者。三、說明書或圖說，故意不載明實施必要之事項，或故意記載不必要之事項，使實施為不可能或困難者。四、同一新型之說明書與曾在外國申請時之說明書內容不同者。
 
-* 105 核准專利之新型，每年每件應繳專利年費如左：一、第一年至第五年，每年三十元。二、第六年至第十年，每年六十元。前項年費，第一年應於領取證書時繳納，第二年以後應於屆期前三個月內預繳之。
+* 105 核准專利之新型，其年費自公告之日起算，第一年應於領取證書時繳納，第二年以後應於屆期前繳納之。
 
-* 106 偽造有專利權之新型者，處二年以下有期徒刑、拘役或科或併科三千元以下罰金。
+> 釋：一、有關專利年費之金額，已併定於第七十五條而第一百十條並有準用之規定，爰予刪除。二、專利年費之起算，為求與專利權期間改自公告日起算相配合，以及第二年以後專利年費之繳納，為求切符實際故修正之。
 
-* 107 仿造有專利權之新型者，處一年以下有期徒刑、拘役或科或併科二千元以下罰金。
+* 106 偽造有專利權之新型者，處二年以下有期徒刑、拘役或科或併科一萬元以下罰金。
 
-* 108 明知為偽造或仿造之新型而販賣，或意圖販賣而陳列，或自外國輸入者，處六個月以下有期徒刑、拘役或一千元以下罰金。
+> 釋：一、為加強保障專利權人之權益，對於侵害專利權者，自有加重處罰之必要，惟以係經濟性犯罪型態，乃僅提高所科之罰金，期能發揮惕勵作用。二、將原訂罰金「三千元以下」，提高為「一萬元以下」。
+
+* 107 仿造有專利權之新型者，處一年以下有期徒刑、拘役或科或併科五千元以下罰金。
+
+> 釋：一、為加強保障專利權人之權益，對於侵害專利權者，自有加重處罰之必要，惟以係經濟性犯罪型態，乃僅提高所科之罰金，期能發揮惕勵作用。二、將原訂罰金「二千元以下」提高為「五千元以下」。
+
+* 108 明知為偽造或仿造有專利權之新型而販賣，或意圖販賣而陳列，或自國外輸入者，處六個月以下有期徒刑、拘役或科或併科三千元以下罰金。
+
+> 釋：一、為加強保障專利權人之權益，對於侵害專利權者，自有加重處罰之必要，惟以係經濟性犯罪型態，乃僅提高所科之罰金，期能發揮惕勵作用。二、將原訂「或一千元以下罰金」修正為「或科或併科三千元以下罰金」，並將「外國」二字修正為「國外」，以應需要。
 
 * 109 前三條之罪須告訴乃論，其告訴應自得知被侵害之日起一年內為之。
 
-* 110 本法第七條至第二十條、第二十三條至第三十一條、第三十三條至第四十一條、第四十三條、第四十四條、第四十六條至第五十四條、第五十六條、第五十八條、第五十九條、第六十一條至第六十六條、第七十二條至第七十五條、第七十八條、第七十九條、第八十條第一款至第三款、第八十一條至第八十八條、第九十二條及第九十四條之規定，於新型準用之。
+* 110 第七條至第二十條、第二十三條至第三十一條、第三十三條至第四十一條、第四十三條、第四十四條、第四十六條至第五十四條、第五十六條、第五十八條、第五十九條、第六十一條至第六十六條、第七十二條至第七十五條、第七十八條、第七十九條、第八十一條至第八十八條、第九十二條及第九十四條之規定，於新型準用之。
+
+> 釋：原列準用之第八十條第一款至第三款業經修正刪除，爰予配合修正。
 
 * 111 凡對於物品之形狀花紋或色彩首先創作，適於美感之新式樣者，得依本法申請專利。
 
@@ -224,7 +294,9 @@
 
 * 113 左列物品不予新式樣專利：一、妨害公共秩序善良風俗或衛生者。二、相同或近似於黨旗、國旗、國父遺像、國徽、軍旗、印信、勳章者。
 
-* 114 申請專利之新式樣，經審查確定後，給予新式樣專利權，並發證書。新式樣專利權之期間為五年，自申請之日起算。
+* 114 申請專利之新式樣，經審查確定後，給予新式樣專利權，並發證書。新式樣專利權之期間為五年，自公告之日起算。但自申請之日起不得逾六年。
+
+> 釋：為使專利權人能享有完整專利期間之利益，參酌外國立法例，將專利權之期間改為審定公告之日起算；又為防止申請人於申請後，故意拖延，乃增訂但書，明定自申請日不得逾越之年限。
 
 * 115 新式樣先經申請新型專利改請新式樣專利者，得以申請新型或新式樣專利之日，作為申請新式樣專利之日。但在新型專利案審定書送達之日起一個月後申請者，不在此限。
 
@@ -232,7 +304,9 @@
 
 * 117 以新式樣申請專利，應指定所使用新式樣之物品，並敘明其類別。前項物品之分類，由經濟部定之。
 
-* 118 公告中之新式樣，任何人認為有違反本法第一百十一條至第一百十三條之規定或利害關係人認為違反本法第一百十六條之規定者，得自公告之日起六個月內備具聲請書，附具證件，向專利局提起異議，請求再審查。
+* 118 公告中之新式樣，任何人認有違反第一百十一條至第一百十三條之規定，或利害關係人認有不合第一百十六條之規定者，得自公告之日起三個月內備具申請書，附具證件，向專利局提起異議，請求再審查。
+
+> 釋：一、本條除作文字修正外，並將審定公告期間，由「六個月」縮短為「三個月」。二、「認為」之「為」字係贅文，比照一般立法例，予以刪除。
 
 * 119 新式樣專利權，為專利權人就其指定新式樣所使用之物品專有製造或販賣之權。
 
@@ -244,23 +318,39 @@
 
 * 123 有左列情事之一者，應撤銷其新式樣專利權，並追繳證書：一、違反本法第一百十一條至第一百十三條之規定者。二、新式樣專利權人，為非新式樣專利申請權人者。
 
-* 124 核准專利之新式樣，每年每件應繳專利年費三十元。前項年費，第一年應於領取證書時繳納，第二年以後，應於屆期前三個月內預繳之。
+* 124 核准專利之新式樣，其年費自公告之日起算，第一年應於領取證書時繳納，第二年以後，應於屆期前繳納之。
 
-* 125 偽造有新式樣專利權之物品者，處一年以下有期徒刑、拘役或科或併科一千元以下罰金。
+> 釋：一、有關專利年費之金額，已併定於第七十五條，而第一百二十九條並有準用之規定，本條第一項爰予刪除。二、專利年費之起算，為求與專利權期間改自公告日起算相配合，以及第二年以後專利年費之繳納，為求切符實際，爰修正之。
 
-* 126 仿造有新式樣專利權之物品者，處六個月以下有期徒刑、拘役或科或併科五百元以下罰金。
+* 125 偽造有新式樣專利權之物品者，處一年以下有期徒刑、拘役或科或併科五千元以下罰金。
 
-* 127 明知為偽造或仿造新式樣之物品而販賣，或意圖販賣而陳列，或自外國輸入者，處拘役或三百元以下罰金。
+> 釋：一、為加強保障專利權人之權益，對於侵害專利權者，自有加重處罰之必要，惟以係經濟性犯罪型態，乃僅提高所科之罰金，期能發揮惕勵作用。二、將原訂罰金「一千元以下」，提高為「五千元以下」。
+
+* 126 仿造有新式樣專利權之物品者，處六個月以下有期徒刑、拘役或科或併科二千元以下罰金。
+
+> 釋：一、為加強保障專利權人之權益，對於侵害專利權者，自有加重處罰之必要，惟以係經濟性犯罪型態，乃僅提高所科之罰金，期能發揮惕勵作用。二、將原訂罰金「五百元以下」，提高為「二千元以下」。
+
+* 127 明知為偽造或仿造有新式樣專利權之物品而販賣，或意圖販賣而陳列，或自國外輸入者，處拘役或科或併科一千元以下罰金。
+
+> 釋：一、為加強保障專利權人之權益，對於侵害專利權者，自有加重處罰之必要，惟以係經濟性犯罪型態，乃僅提高所科之罰金，期能發揮惕勵作用。二、將原訂「或三百元以下罰金」修正為「或科或併科一千元以下罰金」；並將「外國」二字修正為「國外」，以應需要。
 
 * 128 前三條之罪，須告須乃論，其告訴應自得知被侵害之日起一年內為之。
 
-* 129 本法第七條、第十條、第十一條、第十二條第二項、第十三條至第十五條、第十七條至第二十條、第二十四條至第三十一條、第三十三條、第三十四條、第三十七條至第三十九條、第四十一條、第四十四條、第四十七條至第五十四條、第五十八條、第五十九條、第六十一條至第六十三條、第六十五條、第六十六條、第七十三條至第七十五條、第七十八條、第七十九條、第八十條第一款至第三款、第八十一條至第八十八條、第九十二條及第九十四條之規定，於新式樣準用之。
+* 129 第七條、第十條、第十一條、第十二條第二項、第十三條至第十五條、第十七條至第二十條、第二十四條至第三十一條、第三十三條、第三十四條、第三十七條至第三十九條、第四十一條、第四十四條、第四十七條至第五十四條、第五十八條、第五十九條、第六十一條至第六十三條、第六十五條、第六十六條、第七十三條至七十五條、第七十八條、第七十九條、第八十一條至第八十八條、第九十二條及第九十四條之規定，於新式樣準用之。
+
+> 釋：因原列準用之第八十條第一款至第三款業經修正刪除，爰予配合修正。
 
 * 130 本法施行細則，由經濟部定之。
 
-* 131 本法施行前，依法取得之專利權，視同依本法所取得之專利權，但專利期間，仍以原核准者為限。
+* 131 （刪除）
 
-* 132 本法施行前，未決定之專利案，依本法辦理之。
+> 釋：本法於民國三十八年一月一日施行前，有關專利事項，係依獎勵工業技術暫行條例辦理，依該條例第二條及第二十二條規定，其專利權之期間最長者為十五年，至今早經屆滿，現行條文已無規定必要，故予刪除。
 
-* 133 本法施行日期以命令定之。
+* 132 本法修正施行前，未審定之專利案，其以後之程序，依修正後之規定辦理。
+
+> 釋：一、本法自民國三十八年一月一日施行迄今已近三十年，本法施行前未經決定之專利案，早經決定；惟本法此次修正專利權期間之起算、縮短公告期間，並將不服專利審查之救濟程序予以明確規定等，對於本法修正施行前已決定之專利案固無適用餘地，惟此次修正施行前未決定之專利案，其以後之程序，則以適用修正後之規定辦理為宜，爰將本條修正之，以杜爭議。二、「決定」二字辭義不明，易生誤解，經修正為「審定。」
+
+* 133 本法自公布日施行。
+
+> 釋：照一般立法例修正之。
 
