非訟事件法 1980.6.20

--- a/司法-民事/非訟事件法.md
+++ b/司法-民事/非訟事件法.md
@@ -90,7 +90,9 @@
 
 * 46 法人及夫妻財產制契約登記簿，任何人得向登記處請求閱覽，並得繳納費用，請求交付謄本；其附屬文件，利害關係人得釋明原因，請求閱覽。前項釋明原因，登記處認為不當者，得拒絕其閱覽。
 
-* 47 法人及夫妻財產制契約登記規則，由司法行政部定之。
+* 47 法人及夫妻財產制契約登記規則，由司法院定之。
+
+> 釋：審檢分隸實施後，各法院非訟事件，自應由司法院定之，爰將原條文中之「司法行政部」修正為「司法院」。
 
 * 48 關於失蹤人之財產管理事件，由其住所地之法院管轄。
 
@@ -218,7 +220,9 @@
 
 * 110 第一百零二條、第一百零三條及第一百零五條規定之費用，關係人未預納者，法院得限期命其預納；逾期仍不遵行者，得以裁定駁回之。第一百零六條及第一百零八條前段規定之費用，聲請人未預納者，法院得拒絕其請求。
 
-* 111 本法施行細則，由行政院定之。
+* 111 本法施行細則，由司法院定之。
+
+> 釋：將原條文中之「行政院」修正為「司法院」。
 
 * 112 本法自公布日施行。
 
