證券交易法 1981.10.30

--- a/行政-財政及金融/證券交易法.md
+++ b/行政-財政及金融/證券交易法.md
@@ -2,7 +2,9 @@
 
 * 2 有價證券之募集、發行、買賣，其管理、監督依本法之規定，本法未規定者，適用公司法及其他有關法律之規定。
 
-* 3 本法所稱主管機關，為經濟部證券管理委員會。
+* 3 本法所稱主管機關，為財政部證券管理委員會。
+
+> 釋：配合證券管理委員會改隸，將現行第三條規定之「經濟部」修正為「財政部」。
 
 * 4 本法所稱公司，謂依公司法組織之股份有限公司。
 
@@ -30,7 +32,9 @@
 
 * 16 經營前條各款業務之一者為證券商，並依左列各款定其種類：一、經營前條第一款規定之業務者，為證券承銷商。二、經營前條第二款規定之業務者，為證券自營商。三、經營前條第三款規定之業務者，為證券經紀商。
 
-* 17 公司依本法公開募集及發行有價證券時，應先向主管機關申請核准。公司須由具有特定資格之股東所組成，或其事業之範圍或性質不適宜由公眾投資者，得經經濟部之核定，不適用本法及公司法關於公開發行之規定。
+* 17 公司依本法公開募集及發行有價證券時，應先向主管機關申請核准。公司須由具有特定資格之股東所組成，或其事業之範圍或性質不適宜由公眾投資者，得經財政部核定，不適用本法及公司法關於公開發行之規定。
+
+> 釋：一、第一項未修正。二、刪除「得經經濟部之核定」等文字以使財政部逕依職權核定，而強化其權限。
 
 * 18 經營證券投資信託事業、證券金融事業或證券投資顧問事業，應經主管機關之核准；其有關管理、監督事項，由行政院以命令定之。
 
@@ -52,7 +56,9 @@
 
 * 27 主管機關對於公開發行之股票，得規定其每股之最低或最高金額。但規定前已准發行者，得仍照原金額，其增資發行之新股亦同。公司更改其每股金額，每年度以一次為限。
 
-* 28 經濟部認為公司經營之事業，以由公眾投資為適當者，得事先以命令規定發起人認足股份數額之一定限度，其在限度以外之股份，應先行公開招募；招募不足時，由發起人認足之，並得規定一定小額認股者之優先認股權。公司成立後發行新股時，準用前項之規定。但以公積或其他準備轉作資本者，不在此限。
+* 28 公司經營之事業，以由公眾投資為適當者，得由財政部事先以命令規定發起人認足股份數額之一定限度。其在限度以外之股份，應先行公開招募；招募不足時，由發起人認足之，並得規定一定小額認股者之優先認股權。公司成立後發行新股時，準用前項之規定。但以公積或其他準備轉作資本者，不在此限。
+
+> 釋：一、配合本法第十七條條文之修正，酌作文字修正。二、第二項未修正。
 
 * 29 公司債之發行如由金融機構擔任保證人者，得視為有擔保之發行。
 
@@ -186,7 +192,9 @@
 
 * 94 證券交易所之組織，分會員制及公司制。
 
-* 95 設立證券交易所之地區及其組織，由主管機關斟酌當地情況，報請經濟部核定之。前項同一地區內，以設立一個證券交易所為限。每一證券交易所以開設一個有價證券集中交易市場為限
+* 95 設立證券交易所之地區及其組織，由主管機關斟酌當地情況，報請財政部核定之。前項同一地區內，以設立一個證券交易所為限。每一證券交易所，以開設一個有價證券集中交易市場為限。
+
+> 釋：一、本條第一項酌作文字修正，並配合證券管理委員會之改隸，將「經濟部」修正為「財政部」。二、第二項、第三項未修正。
 
 * 96 非依本法不得經營類似有價證券集中交易市場之業務；其以場所或設備供給經營者亦同。
 
@@ -308,7 +316,9 @@
 
 * 155 對於在證券交易所上市之有價證券，不得有左列各款之行為：一、在有價證券集中交易市場無實際成交意思，空報價格，業經有人承諾接受而不實際成交，足以影響市場秩序者。二、意圖影響市場行情，不移轉證券所有權而偽作買賣者。三、意圖影響市場行情，與他人通謀，以約定價格於自己出售，或購買有價證券時，使約定人同時為購買或出售之相對行為者。四、意圖影響市場行情，對某種有價證券，連續以高價買入或以低價賣出者。五、惡意散布足以影響市場行情之流言或不實資料者。六、直接或間接從事其他以影響市場行情為目的之行為者。
 
-* 156 主管機關對於已在證券交易所上市之有價證券，發生左列各款情事時，得命令停止其一部或全部之買賣，或對證券自營商、證券經紀商之買賣數量加以限制：一、發行該有價證券之公司遇有訴訟事件或非訟事件，其結果足使公司解散或變動其組織、資本、業務計劃、財務狀況或停頓生產，而有影響市場秩序或損害公益之虞者。二、發行該有價證券之公司，遇有重大災害，簽訂重要契約，發生特殊事故，改變業務計劃之重要內容或巨額退票，其結果足使公司之財務狀況有顯著重大之變更，而有影響市場秩序或損害公益之虞者。三、發行該有價證券公司之行為，有虛偽不實或違法情事，足以影響其證券價格，而及於市場秩序或損害公益之虞者。四、該有價證券之市場價格，發生連續暴漲或暴跌情事，並使他種有價證券隨同為非正常之漲跌，而有影響市場秩序或損害公益之虞者。已上市之有價證券，發生前項各款以外之情事，顯足影響市場秩序或損害公益者，主管機關經呈准經濟部後，準用前項之規定辦理。
+* 156 主管機關對於已在證券交易所上市之有價證券，發生左列各款情事之一時，得命令停止其一部或全部之買賣，或對證券自營商、證券經紀商之買賣數量加以限制：一、發行該有價證券之公司遇有訴訟事件或非訟事件，其結果足使公司解散或變動其組織、資本、業務計畫、財務狀況或停頓生產，而有影響市場秩序或損害公益之虞者。二、發行該有價證券之公司，遇有重大災害，簽訂重要契約，發生特殊事故，改變業務計畫之重要內容或退票，其結果足使公司之財務狀況有顯著重大之變更，而有影響市場秩序或損害公益之虞者。三、發行該有價證券公司之行為，有虛偽不實或違法情事，足以影響其證券價格，而及於市場秩序或損害公益之虞者。四、該有價證券之市場價格，發生連續暴漲或暴跌情事，並使他種有價證券隨同為非正常之漲跌，而有影響市場秩序或損害公益之虞者。已上市之有價證券，發生前項各款以外之情事，顯足影響市場秩序或損害公益者，主管機關經報請財政部核准後，準用前項之規定辦理。
+
+> 釋：一、本條第一項將第一、二款所定「業務計劃」修正為「業務計畫」。二、第二項配合證券管理委員會改隸，將「經濟部」修正為「財政部」，並作文字修正。三、發行有價證券之公司其信用之良窳事涉公眾利益，對其退票不應視之為一般公司行號，應作較嚴格之管理，以促使其信用健全，經營基礎穩固，以保障公眾投資之安全。
 
 * 157 發行公司董事、監察人、經理人或持有公司百分之五以上股權之股東，對公司之上市股票，於取得後六個月內再行賣出，或於賣出後六個月內再行買進，因而獲得利益者，公司得請求將其利益歸於公司。發行公司董事會或監察人不為公司行使前項請求權時，股東得以三十日之限期，請求董事或監察人行使之；逾期不行使時，請求之股東得為公司行使前項請求權。第一項之請求權，自獲得利益之日起二年間不行使而消滅。
 
