民法第一編總則 1981.12.22

--- a/司法-民事/民法第一編總則.md
+++ b/司法-民事/民法第一編總則.md
@@ -12,7 +12,9 @@
 
 * 7 胎兒以將來非死產者為限，關於其個人利益之保護，視為既已出生。
 
-* 8 失蹤人失蹤滿十年後，法院得因利害關係人之聲請，為死亡之宣告。失蹤人為七十歲以上者，得於失蹤滿五年後，為死亡之宣告。失蹤人為遭遇特別災難者，得於失蹤滿三年後，為死亡之宣告。
+* 8 失蹤人失蹤滿七年後，法院得因利害關係人或檢察官之聲請，為死亡之宣告。失蹤人為八十歲以上者，得於失蹤滿三年後，為死亡之宣告。失蹤人為遭遇特別災難者，得於特別災難終了滿一年後，為死亡之宣告。
+
+> 釋：一、目前交通發達，通訊方便，原定失蹤期間，似嫌過長，爰將一般人、老年人及遭遇特別災難人三種失蹤期間，分別比例縮短為七年、三年、一年。又為顧及公益上需要，倘利害關係人不聲請為死亡宣告或無利害關係人時，宜許檢察官亦得聲請，爰於本條第一項增訂之（參考日本民法第三十條、德國失蹤法第十六條、韓國民法第二十七條）。二、因現代醫藥衛生之進步，國人壽命已普遍增長，故老年人之失蹤年齡似應相對提高，爰將本條第二項失蹤人七十歲以上者改為八十歲以上，並使七十歲以上至未滿八十歲者列入一般失蹤人範圍。三、失蹤人遭遇特別災難者，將原規定得於失蹤滿三年後，改為得於特別災難終了滿一年後，為死亡宣告，較為合理（參考德國失蹤法第四條）。
 
 * 9 受死亡宣告者，以判決內所確定死亡之時，推定其為死亡。前項死亡之時，應為前條各項所定期間最後日終止之時。但有反證者，不在此限。
 
@@ -24,7 +26,9 @@
 
 * 13 未滿七歲之未成年人，無行為能力。滿七歲以上之未成年人，有限制行為能力。未成年人已結婚者，有行為能力。
 
-* 14 對於心神喪失或精神耗弱致不能處理自己事務者，法院得因本人、配偶或最近親屬二人之聲請，宣告禁治產。禁治產之原因消滅時，應撤銷其宣告。
+* 14 對於心神喪失或精神耗弱致不能處理自己事務者，法院得因本人、配偶、最近親屬二人或檢察官之聲請，宣告禁治產。禁治產之原因消滅時，應撤銷其宣告。
+
+> 釋：設有應受禁治產宣告之人而無人為之聲請時，社會交易安全，難免有所影響，為維護公益及應受宣告人本身之利益，爰於第一項增列檢察官亦得為禁治產宣告之聲請；檢察官為此項聲請時，固宜先行查詢當事本人、配偶或其最近親屬之意見，惟檢察官基於公益上之理由，仍得本其獨立之見解，以決定聲請與否。
 
 * 15 禁治產人，無行為能力。
 
@@ -32,11 +36,15 @@
 
 * 17 自由不得拋棄。自由之限制，以不背於公共秩序或善良風俗者為限。
 
-* 18 人格權受侵害時，得請求法院除去其侵害。前項情形，以法律有特別規定者為限，得請求損害賠償或慰撫金。
+* 18 人格權受侵害時，得請求法院除去其侵害；有受侵害之虞時，得請求防止之。前項情形，以法律有特別規定者為限，得請求損害賠償或慰撫金。
+
+> 釋：人格尊嚴之維護，日趨重要，為加強人格權之保護，不但於人格權受侵害時，應許被害人請求除去其侵害，即對於未然之侵害，亦應許其請求防止，爰增訂本條第一項後段規定。
 
 * 19 姓名權受侵害者，得請求法院除去其侵害，並得請求損害賠償。
 
-* 20 以久住之意思，住於一定之地域者，即為設定其住所於該地。一人同時不得有兩住所。
+* 20 依一定事實，足認以久住之意思，住於一定之地域者，即為設定其住所於該地。一人同時不得有兩住所。
+
+> 釋：本條第一項規定住所之設定，兼採主觀主義及客觀主義之精神，所謂「以久住之意思」一語，本應依據客觀事實認定，非當事人可任意主張，原條文規定欠明，易滋疑義，爰在第一項原條文首句前增列「依一定事實，足認」等字樣，明示應依客觀事實，認定其有無久住之意思，以避免解釋上之爭執，並符原立法意旨。
 
 * 21 無行為能力人及限制行為能力人，以其法定代理人之住所為住所。
 
@@ -44,35 +52,55 @@
 
 * 23 因特定行為選定居所者，關於其行為，視為住所。
 
-* 24 以廢止之意思，離去其住所者，即為廢止其住所。
+* 24 依一定事實，足認以廢止之意思離去其住所者，即為廢止其住所。
+
+> 釋：本條之廢止住所與第二十條之設定住所，立法意旨相同，現第二十條既予修正，爰在本條首句增列「依一定事實，足認．．．．．．」等字樣，俾能前後一致。
 
 * 25 法人非依本法或其他法律之規定，不得成立。
 
 * 26 法人於法令限制內，有享受權利負擔義務之能力。但專屬於自然人之權利義務，不在此限。
 
-* 27 法人須設董事。董事就法人一切事務，對外代表法人。對於董事代表權所加之限制，不得對抗善意第三人。
+* 27 法人應設董事。董事有數人者，法人事務之執行，除章程另有規定外，取決於全體董事過半數之同意。董事就法人一切事務，對外代表法人。董事有數人者，除章程另有規定外，各董事均得代表法人。對於董事代表權所加之限制，不得對抗善意第三人。法人得設監察人，監察法人事務之執行。監察人有數人者，除章程另有規定外，各監察人均得單獨行使監察權。
 
-* 28 法人對於其董事或職員因執行職務所加於他人之損害，與該行為人連帶負賠償之責任。
+> 釋：一、董事有數人者，如何行使職權，現行法未設明文，為使法人之內部關係更為明確，爰在本條第一項末段增列「董事有數人者，法人事務之執行，除章程另有規定外，取決於全體董事過半數之同意。」蓋所以尊重法人自治之原則也（參考日本民法第五十二條、韓國民法第五十八條）。二、為配合本條第一項之修正，並使法人對外關係更為明確，爰於第二項增列：董事有數人者，除章程另有規定外，各董事均得代表法人，以維交易之安全。三、監察人雖非法人必設之機關，但實際上一般法人及團體多有監察人之設置，本法未設明文，雖可委諸章程訂定，終不若法有明文為愈。又監察人有數人時，應如何行使職權，亦應明確規定，爰增訂本條第四項規定。
+
+* 28 法人對於其董事或其他有代表權之人因執行職務所加於他人之損害，與該行為人連帶負賠償之責任。
+
+> 釋：原條文所稱「職員」一詞，含義有欠明確，解釋上係指有代表權之職員而言。惟所謂「有代表權之職員」如民法第三十七、三十八條所定之清算人為清算法人之代表及執行機關，與董事同其地位。公司法第二九０條重整以董事為重整人亦同，故有代表權之人應不能稱之為職員。通常社會觀念上稱職員者，多有僱傭關係，且為求本條在適用上，避免易與第一百八十八條相混淆，為作明確區分將「職員」兩字修改為「人」字免去適用上之紛岐與困擾。
 
 * 29 法人以其主事務所之所在地為住所。
 
-* 30 法人非經向主管官署登記，不得成立。
+* 30 法人非經向主管機關登記，不得成立。
+
+> 釋：一、「官署」一詞，為行憲前之法律用語，新近制定或修正之法律，皆改用「機關」二字，本條自當予以修正，以後各條內有「官署」一詞者，亦均應修正為「機關」或其他適當名詞。二、又修正草案本條、第四十八條第二項、第六十一條第二項之「主管機關」依民法總則施行法第十條之規定，雖指法院而言，但如改「主管機關」為「法院」，而將來法制變更，法人登記機關，改為其他機關時（如日本設有登記所），則又須修正民法，反增困擾，不如改為「主管機關」較富彈性。
 
 * 31 法人登記後，有應登記之事項而不登記，或已登記之事項有變更而不為變更之登記者，不得以其事項對抗第三人。
 
-* 32 受設立許可之法人，其業務屬於主管官署監督，主管官署得檢查其財產狀況及其有無違反許可條件與其他法律之規定。
+* 32 受設立許可之法人，其業務屬於主管機關監督，主管機關得檢查其財產狀況及其有無違反許可條件與其他法律之規定。
 
-* 33 受設立許可法人之董事，不遵主管官署監督之命令，或妨礙其檢查者，得處以五百元以下之罰鍰。
+> 釋：「官署」一詞，為行憲前之法律用語，新近制定或修正之法律，皆改用「機關」二字，本條自當予以修正，以後各條內有「官署」一詞者，亦均應修正為「機關」或其他適當名詞。
 
-* 34 法人違反設立許可之條件者，主管官署得撤銷其許可。
+* 33 受設立許可法人之董事或監察人，不遵主管機關監督之命令，或妨礙其檢查者，得處以五千元以下之罰鍰。前項董事或監察人違反法令或章程，足以危害公益或法人之利益者，主管機關得請求法院解除其職務，並為其他必要之處置。
 
-* 35 法人之財產不能清償債務時，董事應即向法院聲請破產。不為前項聲請，致法人之債權人受損害時，其有過失之董事，應負賠償之責任。
+> 釋：一、因社會經濟情況變遷，原定罰鍰數額，難收懲儆之效，爰參考經濟變動情形，將罰鍰金額提高為五千元以下，俾法院可斟酌情形而為適當量處，以加強制裁之效果。又於本條增列「監察人」以配合第二十七條新增第四項之規定。至主管「官署」改為「機關」，其理由同第三十條修正理由說明之一。二、增設主管機關於必要時得請求法院解除董事或監察人職務之規定，期能確保公益（參考私立學校法第三十條、合作社法第四十三條），並與第六十四條，前後呼應。惟為維護法人業務之繼續進行，不致因董事或監察人職務之解除而受影響，應許主管機關為各種必要之處置，例如於新任董事或監察人產生之前，或依非訟事件法第六十五條規定法院依聲請而選任臨時管理人以前，得由主管機關派員暫行管理，或為其他適當之處理。
 
-* 36 法人之目的或其行為，有違反法律、公共秩序或善良風俗者，法院得因主管官署、檢察官或利害關係人之請求，宣告解散。
+* 34 法人違反設立許可之條件者，主管機關得撤銷其許可。
+
+> 釋：將「官署」，改為「機關」，其理由，見第三十條修正理由說明之一。
+
+* 35 法人之財產不能清償債務時，董事應即向法院聲請破產。不為前項聲請，致法人之債權人受損害時，有過失之董事，應負賠償責任，其有二人以上時，應連帶負責。
+
+> 釋：一、第一項不修正。二、本條董事有二人以上時，應否負連帶賠償責任，宜以明文規定，爰予增列。
+
+* 36 法人之目的或其行為，有違反法律、公共秩序或善良風俗者，法院得因主管機關、檢察官或利害關係人之請求，宣告解散。
+
+> 釋：本條將「官署」改為「機關」之理由，同第三十條修正理由說明之一。
 
 * 37 法人解散後，其財產之清算，由董事為之。但其章程有特別規定，或總會另有決議者，不在此限。
 
-* 38 不能依前條規定，定其清算人時，法院得因利害關係人之聲請，選任清算人。
+* 38 不能依前條規定，定其清算人時，法院得因主管機關、檢察官或利害關係人之聲請，或依職權，選任清算人。
+
+> 釋：不能依前條規定，定其清算人，亦無利害關係人聲請選任時，宜有補救之道，爰增訂法院得依主管機關、檢察官之聲請或依職權，選任清算人之規定（參考日本民法第七十五條）。
 
 * 39 清算人，法院認為有必要時，得解除其任務。
 
@@ -80,53 +108,91 @@
 
 * 41 清算之程序，除本通則有規定外，準用股份有限公司清算之規定。
 
-* 42 法人之清算，屬於法院監督。法院得隨時為監督上必要之檢查。
+* 42 法人之清算，屬於法院監督。法院得隨時為監督上必要之檢查及處分。法人經主管機關撤銷許可或命令解散者，主管機關應同時通知法院。法人經依章程規定或總會決議解散者，董事應於十五日內報告法院。
 
-* 43 清算人不遵法院監督命令，或妨礙檢查者，得處以五百元以下之罰鍰。
+> 釋：一、法人開始清算程序後，即歸法院監督。法院監督清算中之法人，除隨時得為監督上必要之檢查外，關於清算中法人財產之處分及債務之負擔，亦在監督範圍之內，必要時應得為適當之處分。本條原條文後段僅言及「必要之檢查」，而未將得為必要之處分表明，有欠週密，易生爭議，爰於本條第一項末加「及處分」三字，以求明顯。此處所謂「處分」，自係指監督上之「必要處分」而言，即與民法第六十二條之「處分」意義相類似。二、法人經法院依本法第五十八條宣告解散者，法院固得逕行監督其清算之進行，惟法人係經主管機關撤銷許可（本法第三十四條）、命令解散（第六十五條）或依章程規定（第四十八條第一項第九款、第六十一條第一項第八款）或依總會決議（第五十七條）解散，未經主管機關通知或董事報告者，法院難於知悉而開始實施監督，故增列第二項及第三項，俾法院得及時行使監督權。
 
-* 44 法人解散後，除清償債務外，其賸餘財產之歸屬，應依其章程之規定，或總會之之決議。如無前項章程之規定或總會之決議時，其賸餘財產屬於法人住所所在地之地方自治團體。
+* 43 清算人不遵法院監督命令，或妨礙檢查者，得處以五千元以下之罰鍰。董事違反前條第三項之規定者亦同。
+
+> 釋：一、提高罰鍰金額理由同第三十三條修正理由說明之一。二、為加重法人董事之責任，爰規定董事違反前條第三項規定，未於十五日內報告法院者，亦得處五千元以下之罰鍰，以貫澈立法目的。
+
+* 44 法人解散後，除法律另有規定外，於清償債務後，其賸餘財產之歸屬，應依其章程之規定，或總會之決議。但以公益為目的之法人解散時，其賸餘財產不得歸屬於自然人或以營利為目的之團體。如無前項法律或章程之規定或總會之決議時，其賸餘財產歸屬於法人住所所在地之地方自治團體。
+
+> 釋：一、第一項增列「除法律另有規定外」一語，係為顧及特別法之規定；並增列但書，以防假公益之名而圖私利之弊。二、第二項配合前項修正，增列「法律」二字。
 
 * 45 以營利為目的之社團，其取得法人資格，依特別法之規定。
 
-* 46 以公益為目的之社團，於登記前，應得主管官署之許可。
+* 46 以公益為目的之社團，於登記前，應得主管機關之許可。
 
-* 47 設立社團者，應訂定章程，其應記載之事項如左：一、目的。二、名稱。三、董事之任免。四、總會召集之條件、程序及其決議證明之方法。五、社員之出資。六、社員資格之取得與喪失。
+> 釋：將「官署」改為「機關」，其理由同第三十條修正說明之一。
 
-* 48 社團設立時，應登記之事項如左：一、目的。二、名稱。三、主事務所及分事務所。四、董事之姓名及住所。五、財產之總額。六、應受設立許可者，其許可之年月日。七、定有出資方法者，其方法。八、限制董事代表權者，其限制。九、定有存立時期者，其時期。社團之登記，由董事向其主事務所及分事務所所在地之主管官署行之，並應附具章程備案。
+* 47 設立社團者，應訂定章程，其應記載之事項如左：一、目的。二、名稱。三、董事之人數、任期及任免。設有監察人者，其人數、任期及任免。四、總會召集之條件、程序及其決議證明之方法。五、社員之出資。六、社員資格之取得與喪失。七、訂定章程之年、月、日。
+
+> 釋：一、董事之人數、任期，宜在章程定明，其設有監察人者亦同，爰於第三款增列之（參考公司法第一百二十九條第六款、農會法第十一條第九款、商業團體法第十二條第十款、醫師法第三十九條第四款）。二、訂定章程之日期，關係社員之權利義務甚大，爰增設第七款，以利實務（參考公司法第四十一條第一項第十一款、第一百零一條第一項第十款、第一百二十九條第七款）。
+
+* 48 社團設立時，應登記之事項如左：一、目的。二、名稱。三、主事務所及分事務所。四、董事之姓名及住所。設有監察人者，其姓名及住所。五、財產之總額。六、應受設立許可者，其許可之年、月、日。七、定有出資方法者，其方法。八、定有代表法人之董事者，其姓名。九、定有存立時期者，其時期。社團之登記，由董事向其主事務所及分事務所所在地之主管機關行之，並應附具章程備案。
+
+> 釋：一、本條第一項第一、二、三、五、六、七、九款不修正。現行法第二十七條第三項係指對於董事代表權之部分限制，而修正後第二項所謂章程另有規定有代表權之董事時，則將全部剝奪其他董事對外之代表權，故二者有所不同；該條第二項之規定，不能適用同條第三項不得對抗善意第三人之規定。惟如經登記，則依第三十一條之反面解釋，即可對抗第三人，爰將本條第一項第八款及第六十一條第一項第七款，均改為：「定有代表法人之董事者，其姓名。」，以維護交易之安全。二、第一項第四款，為配合法人設置監察人制度，予以增列。三、第二項之「官署」改為「機關」之理由，同第三十條修正理由說明之一。
 
 * 49 社團之組織及社團與社員之關係，以不違反第五十條至第五十八條之規定為限，得以章程定之。
 
-* 50 社團以總會為最高機關。左列事項應經總會之決議：一、變更章程。二、任免董事。三、監督董事職務之執行。四、開除社員，但以有正當理由時為限。
+* 50 社團以總會為最高機關。左列事項應經總會之決議：一、變更章程。二、任免董事及監察人。三、監督董事及監察人職務之執行。四、開除社員。但以有正當理由時為限。
 
-* 51 總會由董事召集之。如有全體社員十分一以上之請求，表明會議目的及召集理由，請求召集時，董事須召集之。董事受前項之請求後，一個月內不為召集者，得由請求之社員，經法院之許可召集之。
+> 釋：因第二十七條已增列第四項規定：「法人得設監察人，監察法人事務之執行」，故本條第二項第二、三兩款，亦分別增列「監察人」，以資配合。
 
-* 52 總會決議，除本法有特別規定外，以出席社員過半數決之。社員有平等之表決權。
+* 51 總會由董事召集之，每年至少召集一次。董事不為召集時，監察人得召集之。如有全體社員十分一以上之請求，表明會議目的及召集理由，請求召集時，董事應召集之。董事受前項之請求後，一個月內不為召集者，得由請求之社員，經法院之許可召集之。總會之召集，除章程另有規定外，應於三十日前對各社員發出通知。通知內應載明會議目的事項。
 
-* 53 社團變更章程之決議，應有全體社員過半數之出席，出席社員四分三以上之同意，或有全體社員三分二以上書面之同意。受設立之許可之社團，變更章程時，並應得主管官署之許可。
+> 釋：一、社團總會常會每年召集次數，現行法未設明文，致有多年不召集情事，影響社團與社員之利益至鉅，爰增訂第一項後段，規定每年至少召集一次（參考韓國民法第六十九條、日本民法第六十條），並規定董事不為召集時，得由監察人召集之（參考我國公司法第二百二十條）。二、第二項「須」字改為「應」字。三、總會召集方法現行民法未設明文，爰增訂第四項，俾資遵循。為顧及居住較遠地區之社員利益起見，規定總會之召集，除章程另有規定外，應於三十日前對各社員發出通知（參考韓國民法第七十一條、日本民法第六十二條）。通知內並應載明會議目的事項，俾社員得預先考慮有關事項。
+
+* 52 總會決議，除本法有特別規定外，以出席社員過半數決之。社員有平等之表決權。社員表決權之行使，除章程另有限制外，得以書面授權他人代理為之。但一人僅得代理社員一人。社員對於總會決議事項，因自身利害關係而有損害社團利益之虞時，該社員不得加入表決，亦不得代理他人行使表決權。
+
+> 釋：一、社員表決權之行使，除章程另有限制外，宜許社員以書面委託代理人出席總會，行使表決權，爰增訂第三項，以應需要（參考韓國民法第七十三條第二項、日本民法第六十五條第二項），但為免總會為少數人操縱，爰限制一人僅得代理社員一人行使表決權（參考公司法第一百七十七條第二項。二、總會決議事項，因社員自身利害關係而有損害社團利益之虞時，該社員應無表決權，並應防止其與他社員勾串，以代理人名義行使表決權，爰增訂本條第四項（參考公司法第一百七十八條、韓國民法第七十四條、日本民法第六十六條、德國民法第三十四條、瑞士民法第六十八條）。
+
+* 53 社團變更章程之決議，應有全體社員過半數之出席，出席社員四分三以上之同意，或有全體社員三分二以上書面之同意。受設立許可之社團，變更章程時，並應得主管機關之許可。
+
+> 釋：第二項之「官署」改為「機關」，其理由同第三十條修正理由說明之一。
 
 * 54 社員得隨時退社。但章程限定於事務年度終，或經過預告期間後，始准退社者，不在此限。前項預告期間，不得超過六個月。
 
 * 55 已退社或開除之社員，對於社團之財產無請求權。但非公益法人，其章程另有規定者，不在此限。前項社員，對於其退社或開除以前應分擔之出資，仍負清償之義務。
 
-* 56 總會之決議，有違反法令或章程者，對該決議原不同意之社員，得請求法院宣告其決議為無效。前項之請求，應於決議後三個月內為之。
+* 56 總會之召集程序或決議方法，違反法令或章程時，社員得於決議後三個月內請求法院撤銷其決議。但出席社員，對召集程序或決議方法，未當場表示異議者，不在此限。總會決議之內容違反法令或章程者，無效。
+
+> 釋：一、本條原第一項關於總會之召集程序或決議方法違法者，應非無效而為得訴請撤銷，但曾經出席總會並對召集程序或決議方法，未當場表示異議之社員，自無許其再行訟爭之理。爰修正第一項前段並增設但書規定，以資限制（參考瑞士民法第七十五條，我國公司第一百八十九條）。二、總會決議之內容違反法令或章程者，其決議當然無效，無待請求法院宣告，爰修正增列第二項（參考公司法第一百九十一條），以防不法之徒假藉社團名義，作成違法決議，危害公眾利益。
 
 * 57 社團得隨時以全體社員三分二以上之可決解散之。
 
-* 58 社團之事務，無從依章程所定進行時，法院得因利害關係人之聲請解散之。
+* 58 社團之事務，無從依章程所定進行時，法院得因主管機關、檢察官或利害關係人之聲請解散之。
 
-* 59 財團於登記前，應得主管官署之許可。
+> 釋：為期與本法第三十六條、第三十八條、第六十二條、第六十四條等規定一致起見，增列主管機關及檢察官為得聲請解散之人。
 
-* 60 設立財團者，應訂立捐助章程。但以遺囑捐助者，不在此限。捐助章程，應訂明法人目的及所捐財產。
+* 59 財團於登記前，應得主管機關之許可。
 
-* 61 財團設立時，應登記之事項如左：一、目的。二、名稱。三、主事務所及分事務所。四、財產之總額。五、受許可之年月日。六、董事之姓名及住所。七、限制董事代表權者，其限制。八、定有存立時期者，其時期。財團之登記，由董事向其主事務所及分事務所所在地之主管官署行之，並應附具捐助章程備案。
+> 釋：「官署」修正為「機關」，其理由同第三十條修正理由說明之一。
 
-* 62 財團之組織及其管理方法，由捐助人以捐助章程定之。捐助章程所定之組織不完全，或重要之管理方法不具備者，法院得因利害關係人之聲請，為必要之處分。
+* 60 設立財團者，應訂立捐助章程。但以遺囑捐助者，不在此限。捐助章程，應訂明法人目的及所捐財產。以遺囑捐助設立財團法人者，如無遺囑執行人時，法院得依主管機關、檢察官或利害關係人之聲請，指定遺囑執行人。
 
-* 63 為維持財團之目的或保存其財產，法院得因捐助人、董事或利害關係人之聲請，變更其組織。
+> 釋：以遺囑捐助設立財團法人者，如有遺囑執行人，應由遺囑執行人辦理財團之設立，如遺囑執行人怠於執行職務，則依民法第一千二百十八條規定處理之。倘無遺囑執行人，應另設處理辦法，以實現遺囑人熱心公益事業之願望，爰增設本條第三項規定，法院得依主管機關、檢察官或利害關係人之聲請，指定遺囑執行人，辦理財團設立事項（參考德國民法第八十三條之立法旨趣）。
 
-* 64 財團董事，有違反捐助章程之行為時，法院得因利害關係人之聲請，宣告其行為為無效。
+* 61 財團設立時，應登記之事項如左：一、目的。二、名稱。三、主事務所及分事務所。四、財產之總額。五、受許可之年、月、日。六、董事之姓名及住所。設有監察人者，其姓名及住所。七、定有代表法人之董事者，其姓名。八、定有存立時期者，其時期。財團之登記，由董事向其主事務所及分事務所所在地之主管機關行之。並應附具捐助章程或遺囑備案。
 
-* 65 因情事變更，致財團之目的不能達到時，主管官署得斟酌捐助人之意思，變更其目的及其必要之組織，或解散之。
+> 釋：一、本條第一項第一、二、三、四、五、八各款不修正。第六款為配合法人設置監察人制度，予以增列。第七款之修正，其理由見第四十八條修正理由說明之一。二、財團法人之聲請許可及登記等程序，應包括在前條第一項設立行為之內，且前條第一項但書之遺囑，應可代替捐助章程，為配合前條之規定，爰在本條第二項末句增列「或遺囑」字樣，以應實用需要。
+
+* 62 財團之組織及其管理方法，由捐助人以捐助章程或遺囑定之。捐助章程或遺囑所定之組織不完全，或重要之管理方法不具備者，法院得因主管機關、檢察官或利害關係人之聲請，為必要之處分。
+
+> 釋：一、為配合前條第二項之修正，本條「捐助章程」一詞下，亦增列「或遺囑」字樣。二、為期與本法第三十六條、第三十八條、第六十三條、第六十四條等規定一致起見，增設主管機關或檢察官，亦得為聲請之規定。
+
+* 63 為維持財團之目的或保存其財產，法院得因捐助人、董事、主管機關、檢察官或利害關係人之聲請，變更其組織。
+
+> 釋：本條增設主管機關及檢察官亦得為聲請之規定，其理由同第六十二條修正理由說明之二。
+
+* 64 財團董事，有違反捐助章程之行為時，法院得因主管機關、檢察官或利害關係人之聲請，宣告其行為為無效。
+
+> 釋：為維護社會公益，防止財團董事濫用職權，違反章程以圖私利，增設主管機關或檢察官亦得聲請法院宣告其行為無效之規定。
+
+* 65 因情事變更，致財團之目的不能達到時，主管機關得斟酌捐助人之意思，變更其目的及其必要之組織，或解散之。
+
+> 釋：「官署」改為「機關」，其理由同第三十條修正理由說明之一。
 
 * 66 稱不動產者，謂土地及其定著物。不動產之出產物，尚未分離者，為該不動產之部分。
 
@@ -166,7 +232,9 @@
 
 * 84 法定代理人允許限制行為能力人處分之財產，限制行為能力人就該財產有處分之能力。
 
-* 85 法定代理人允許限制行為能力人獨立營業者，限制行為能力人，關於其營業，有行為能力。限制行為能力人，就其營業有不勝任之情形時，法定代理人得將其允許撤銷或限制之。
+* 85 法定代理人允許限制行為能力人獨立營業者，限制行為能力人，關於其營業，有行為能力。限制行為能力人，就其營業有不勝任之情形時，法定代理人得將其允許撤銷或限制之。但不得對抗善意第三人。
+
+> 釋：一、第一項不修正。二、為維護交易之安全及保障善意第三人起見，於第二項增設但書，明定「允許」之撤銷或限制，不得對抗善意第三人。
 
 * 86 表意人無欲為其意思表示所拘束之意，而為意思表示者，其意思表示，不因之無效。但其情形為相對人所明知者，不在此限。
 
@@ -232,7 +300,9 @@
 
 * 117 法律行為須得第三人之同意始生效力者，其同意或拒絕，得向當事人之一方為之。
 
-* 118 無權利人就權利標的物所為之處分，經有權利人之承認始生效力。無權利人就權利標的物為處分後取得其權利者，其處分自始有效。前項情形，若數處分相牴觸時，以其最初之處分為有效。
+* 118 無權利人就權利標的物所為之處分，經有權利人之承認始生效力。無權利人就權利標的物為處分後，取得其權利者，其處分自始有效。但原權利人或第三人已取得之利益，不因此而受影響。前項情形，若數處分相牴觸時，以其最初之處分為有效。
+
+> 釋：無權利人就權利標的物為處分後，迄其取得其權利之期間內，原權利人對該項標的物，未為使用收益者，固不生問題，倘仍使用收益，則承認無權利人之處分為自始有效，即顯然足以妨害原權利人及第三人在該期間內使用收益之權能，殊不相宜，故增設第二項但書，以資補救。
 
 * 119 法令、審判或法律行為所定之期日及期間，除有特別訂定外，其計算依本章之規定。
 
@@ -254,23 +324,37 @@
 
 * 128 消滅時效，自請求權可行使時起算。以不行為為目的之請求權，自為行為時起算。
 
-* 129 消滅時效，因左列事由而中斷：一、請求。二、承認。三、起訴。左列事項，與起訴有同一效力：一、依督促程序，送達支付命令。二、因和解而傳喚。三、報明破產債權。四、告知訴訟。五、開始執行行為或聲請強制執行。
+* 129 消滅時效，因左列事由而中斷：一、請求。二、承認。三、起訴。左列事項，與起訴有同一效力：一、依督促程序，聲請發支付命令。二、聲請調解或提付仲裁。三、申報和解債權或破產債權。四、告知訴訟。五、開始執行行為或聲請強制執行。
+
+> 釋：一、第二項第一款係參照民事訴訟法第五百十九條第一項之規定，債權人支付命令之聲請，應視為起訴或聲請調解，而予修正。二、第二項第二款，原係根據前民事訴訟條例第四百九十三條規定而設，茲依現行民事訴訟法第四百零五條之規定，修正為「聲請調解」。凡其他法律有得聲請調解之規定而在性質上亦應認其與起訴有同一效力者，均包括在內（參考最高法院四十八年臺上字第七二二號及九三六號判例。）又（一）依商務仲裁條例第二十一條之規定：仲裁人之判斷，於當事人間，與法院之確定判決有同一之效力；（二）證券交易法第一百六十六條第一項規定：依本法所為有價證券交易所生之爭議，不論當事人間有無訂立仲裁契約，均應進行仲裁。同條第二項規定：前項仲裁，除本法規定外，依商務仲裁條例之規定；（三）勞資爭議處理法第三十八條第二項之規定：爭議當事人對第三條第二項、第七條第二項所定視同爭議當事人間契約之決定裁決，得由爭議當事人另依民事法規，逕向法院請求強制執行；並參照民法第五百三十四條第六款等規定，則提付仲裁，亦應發生時效中斷之效力。爰增列「或提付仲裁」，以適應日益發達之工商業社會需要。三、第二項第三款，申報和解債權應與申報破產債權有同一之效力，並參照破產法第十二條第一項第三款、第二項及同法第六十五條第一項第五款申報債權之用語，將本款修正為：「申報和解債權或破產債權」，以便適用。四、第二項第四、五兩款不修正。
 
 * 130 時效因請求而中斷者，若於請求後六個月內不起訴，視為不中斷。
 
-* 131 時效因起訴而中斷者，若撤回其訴，或因不合法而受駁回之判決，其判決確定，視為不中斷。
+* 131 時效因起訴而中斷者，若撤回其訴，或因不合法而受駁回之裁判，其裁判確定，視為不中斷。
 
-* 132 時效因送達支付命令而中斷者，若訴訟拘束失其效力時，視為不中斷。
+> 釋：本條所謂駁回之「判決」，係沿用前民事訴訟條例用語，應修正為「裁判」，以符現制。
 
-* 133 時效因和解傳喚而中斷者，若相對人不到庭或和解不成時，視為不中斷。
+* 132 時效因聲請發支付命令而中斷者，若撤回聲請，或受駁回之裁判，或支付命令失其效力時，視為不中斷。
 
-* 134 時效因報明破產債權而中斷者，若債權人撤回其報明時，視為不中斷。
+> 釋：為配合第一百二十九條第二項第一款之修正，修正本條條文。
+
+* 133 時效因聲請調解或提付仲裁而中斷者，若調解之聲請經撤回、被駁回、調解不成立或仲裁之請求經撤回、仲裁不能達成判斷時，視為不中斷。
+
+> 釋：一、為配合第一百二十九條第二項第二款之修正，修正本條之規定。二、又依現行民事訴訟法第四百零六條第二項規定，既得逕以裁定駁回調解之聲請，遇此情形，時效應視為不中斷；又民法總則第一百三十一條、第一百三十四條均規定有撤回之情形，乃增列「經撤回」或「請求經撤回」亦視為不中斷。且民事訴訟法第四百二十條規定調解之當事人兩造或一造於期日不到場者，法院得酌量情形，視為調解不成立，本條亦應酌予修正。至調解不成立或仲裁不能達成判斷，應視為時效不中斷，乃屬理所當然。
+
+* 134 時效因申報和解債權或破產債權而中斷者，若債權人撤回其申報時，視為不中斷。
+
+> 釋：為配合第一百二十九條第二項第三款之修正，修正本條規定。
 
 * 135 時效因告知訴訟而中斷者，若於訴訟終結後，六個月內不起訴，視為不中斷。
 
-* 136 時效因開始執行行為而中斷者，若因權利人之聲請，或法律上要件之欠缺而撤銷其執行處分時，視為不中斷。時效因強制執行而中斷者，若撤回其聲請，或其聲請被駁回時，視為不中斷。
+* 136 時效因開始執行行為而中斷者，若因權利人之聲請，或法律上要件之欠缺而撤銷其執行處分時，視為不中斷。時效因聲請強制執行而中斷者，若撤回其聲請，或其聲請被駁回時，視為不中斷。
 
-* 137 時效中斷者，自中斷之事由終止時，重行起算。因起訴而中斷之時效，自受確定判決或因其他方法訴訟終結時，重行起算。
+> 釋：第二項於「強制執行而中斷者」一語上增「聲請」二字，俾臻明確。
+
+* 137 時效中斷者，自中斷之事由終止時，重行起算。因起訴而中斷之時效，自受確定判決，或因其他方法訴訟終結時，重行起算。經確定判決或其他與確定判決有同一效力之執行名義所確定之請求權，其原有消滅時效期間不滿五年者，因中斷而重行起算之時效期間為五年。
+
+> 釋：按法律規定短期消滅時效，係以避免舉證困難為主要目的，如請求權經法院判決確定，或和解、調解成立者，其實體權利義務關係，業已確定，不再發生舉證問題，為保護債權人之合法利益，以免此種債權人明知債務人無清償能力，仍須不斷請求強制執行或為其他中斷時效之行為，並為求其與強制執行法第四條第三項相呼應，爰增訂本條第三項以延長時效期間為五年（參考德國民法二百十八條、日本民法一百七十四條之二）。
 
 * 138 時效中斷，以當事人、繼承人、受讓人之間為限，始有效力。
 
@@ -292,7 +376,9 @@
 
 * 147 時效期間，不得以法律行為加長或減短之，並不得預先拋棄時效之利益。
 
-* 148 權利之行使，不得以損害他人為主要目的。
+* 148 權利之行使，不得違反公共利益，或以損害他人為主要目的。行使權利，履行義務，應依誠實及信用方法。
+
+> 釋：一、權利人於法律限制內，雖得自由行使其權利，惟不得違反公共利益，乃權利社會化之基本內涵，爰於原第一百四十八條，增列「權利之行使，不得違反公共利益」，俾與我民法立法原則更相
 
 * 149 對於現時不法之侵害，為防衛自己或他人之權利所為之行為，不負損害賠償之責。但已逾越必要程度者，仍應負相當賠償之責。
 
